src/test/ui/generator/no-arguments-on-generators.stderr
error[E0628]: generators cannot have explicit arguments
  --> $DIR/no-arguments-on-generators.rs:4:15
   |
LL |     let gen = |start| { //~ ERROR generators cannot have explicit arguments
   |               ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0628`.
